<resources>
    <string name="app_name">CSC2990-PokemonTrackerForm</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="edithp">HP</string>
    <string name="edittextattack">Attack</string>
    <string name="edittextdefense">edittextdefense</string>
    <string name="poke_tracker">Poke-Tracker</string>
    <string name="register_a_new_catch">Register a new catch!</string>
    <string name="national_number">National Number</string>
    <string name="edittextNationalNum">Name</string>
    <string name="textviewName">Name</string>
    <string name="textspecies">Species</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="textHeight">Height</string>
    <string name="textweight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="_0_1010">0 - 1010</string>
    <string name="poke_tracker1">Poke - Tracker</string>
    <string name="register_new_catch">Register new catch</string>
    <string name="national_number1">National Number</string>
    <string name="_0_10101">0-1010</string>
    <string name="_896">896</string>
    <string name="glastrier">Glastrier</string>
    <string name="wild_horse_pok_mon">Wild Horse Pokemon</string>
    <string name="_2_2_m">2.2 m</string>
    <string name="_800_0_kg">800.0 Kg</string>
    <string name="_0">0</string>
    <string name="rowname">rowName</string>
    <string name="type">Type</string>
    <string name="rownatnum">rowNatNum</string>
    <string name="sort_by_national_number_asc">Sort by National Number (ASC)</string>
    <string name="back">Back</string>
</resources>